--- a/car/pubspec.yaml
+++ b/car/pubspec.yaml
@@ -1,5 +1,5 @@
 name: car
-description: A new Flutter project.
+description: Application de location de vehicule.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
